--- a/56-web-business-card/templates/index.html
+++ b/56-web-business-card/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My website</title>
+    <link rel="stylesheet" href="static/styles.css">
+
 </head>
 <body>
     <h1>Hello World!</h1>
