--- a/57-flask-blog/templates/index.html
+++ b/57-flask-blog/templates/index.html
@@ -5,9 +5,13 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>{{ 5 * 6 }}</h2>
-    <h3>Random number: {{ num }}</h3>
+<!--    <h1>Hello World!</h1>-->
+<!--    <h2>{{ 5 * 6 }}</h2>-->
+<!--    <h3>Random number: {{ num }}</h3>-->
+    <h1>Hi {{ name }}</h1>
+    <h2>I think you're {{ gender }}</h2>
+    <h3>and maybe you're {{ age }} old</h3>
+    <a href="{{ url_for('get_blog'), num=3 }}">Go to blog</a>
 </body>
 <footer>
     <p>Copyright year {{ year }}</p>
