--- a/57-flask-blog/templates/index2.html
+++ b/57-flask-blog/templates/index2.html
@@ -11,20 +11,31 @@
     <div class="top">
         <div class="title"><h1>My Blog</h1></div>
     </div>
-    <div class="content">
-        <div class="card">
-            <h2>Just a blog post</h2>
-            <p class="text">Lorem ipsum dolor sit </p>
-            <a href="#">Read</a>
+
+    {% for blog_post in posts %}
+        <div class="content">
+            <div class="card">
+                <h2>{{ blog_post["title"] }}</h2>
+                <p class="text">{{ blog_post["subtitle"] }} </p>
+                <a href="{{ url_for('show_post', index=post.id) }}">Read</a>
+            </div>
         </div>
-    </div>
-    <div class="content">
-        <div class="card">
-            <h2>Another blog post</h2>
-            <p class="text">Lorem ipsum dolor sit </p>
-            <a href="#">Read</a>
-        </div>
-    </div>
+    {% endif %}
+
+<!--    <div class="content">-->
+<!--        <div class="card">-->
+<!--            <h2>Just a blog post</h2>-->
+<!--            <p class="text">Lorem ipsum dolor sit </p>-->
+<!--            <a href="#">Read</a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="content">-->
+<!--        <div class="card">-->
+<!--            <h2>Another blog post</h2>-->
+<!--            <p class="text">Lorem ipsum dolor sit </p>-->
+<!--            <a href="#">Read</a>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 </body>
 <footer>
