--- a/64-top10-movies-website/templates/index.html
+++ b/64-top10-movies-website/templates/index.html
@@ -10,7 +10,7 @@
     {% for movie in all_movies %}
       <div class="card" >
         <div class="front" style="background-image: url({{ movie.img_url }});">
-            <p class="large">1</p>
+            <p class="large">{{ movie.ranking }}</p>
         </div>
         <div class="back">
           <div>
@@ -23,7 +23,6 @@
             <p class="overview">
                 {{ movie.description }}
             </p>
-    {% endfor %}
 
         <a href="#" class="button">Update</a>
         <a href="#" class="button delete-button">Delete</a>
@@ -31,6 +30,7 @@
       </div>
     </div>
   </div>
+    {% endfor %}
 </div>
 <div class="container text-center add">
 <a href="#" class="button">Add Movie</a>
