--- a/67-blog-api/templates/index.html
+++ b/67-blog-api/templates/index.html
@@ -27,7 +27,7 @@
           <h2 class="post-title">{{ post.title }}</h2>
           <h3 class="post-subtitle">{{ post.subtitle }}</h3>
         </a>
-        <!-- Added anchor tag to delete posts next to author's name -->
+        <!-- Added anchor tag to delete posts next to the author's name -->
         <p class="post-meta">
           Posted by
           <a href="#">{{post.author}}</a>
@@ -45,7 +45,6 @@
           <h2 class="post-title">{{ post.title }}</h2>
           <h3 class="post-subtitle">{{ post.subtitle }}</h3>
         </a>
-        <!-- TODO: Add code to delete posts below -->
         <p class="post-meta">
           Posted by
           <a href="#">{{post.author}}</a>
@@ -58,7 +57,6 @@
 
       <!-- New Post -->
       <div class="d-flex justify-content-end mb-4">
-      <!-- TODO: Adding new posts -->
         <a
           class="btn btn-primary float-right"
           href="TODO: add code to add_new_post here"
